[Finish] Comment function

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -46,7 +46,10 @@
               </td>
               <td>
                 <%= book.body %>
-              </td>              
+              </td>
+              <td>
+                <%= "コメント数:#{book.book_comments.count}" %>
+              </td>
             </tr>
           <% end %>
         </tbody>
