--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,10 +3,10 @@
 <div class="container px-0 mt-3">
   <div class="row">
     <%= render partial: 'templates/template', locals: {book: @new_book, user: @user} %>
-    
+
     <div class="col-md-8 offset-md-1">
       <h2>Book detail</h2>
-      
+
       <table class="table">
         <tbody>
           <tr>
@@ -24,17 +24,44 @@
             <td>
               <%= @book.body %>
             </td>
+            <td>
+                コメント数:<%= @book.book_comments.count %>
+              </td
             <% if @user == current_user %>
               <td>
                 <%= link_to "Edit", edit_book_path(@book), class: "btn btn-success px-2 py-1" %>
               </td>
               <td>
                 <%= link_to "Destroy", book_path(@book), method: :delete, data: {confirm: "本当に消しますか？"}, class: "btn btn-danger px-2 py-1" %>
-              </td>
+              </td>>
             <% end %>
           </tr>
         </tbody>
       </table>
+
+      <div class="row align-items-center">
+        <% @book.book_comments.each do |book_comment| %>
+          <div class="col-2">
+            <%= link_to(user_path(book_comment.user)) do %>
+              <%= image_tag book_comment.user.get_profile_image(80,80) %><br>
+              <%= book_comment.user.name %>
+            <% end %>
+          </div>
+          <div class="col-10">
+            <%= book_comment.comment %>
+            <% if book_comment.user == current_user %>
+              <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn btn-danger" %>
+            <% end %>
+          </div>
+        <% end %>
+      </div>
+      <div>
+        <%= form_with model: [@book, @book_comment] do |f| %>
+          <%= f.text_area :comment, rows: '5', class: "w-100" %>
+          <%= f.submit "送信" %>
+        <% end %>
+      </div>
+
     </div>
   </div>
 </div>
