--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -47,6 +47,19 @@
               <td>
                 <%= book.body %>
               </td>
+              <% if book.favorited_by?(current_user) %>
+                <td>
+                  <%= link_to book_favorites_path(book), class: "text-danger", method: :delete do%>
+                    <i class="fas fa-heart"></i><%= book.favorites.count %>
+                  <% end %>
+                </td>  
+              <% else %>
+                <td>
+                  <%= link_to book_favorites_path(book), method: :post do %>
+                    <i class="fas fa-heart"></i><%= book.favorites.count %>
+                  <% end %>
+                </td>
+              <% end %>
               <td>
                 <%= "コメント数:#{book.book_comments.count}" %>
               </td>
