--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,18 +19,35 @@
         <tbody>
           <% @books.each do |book| %>
             <tr>
-              <td class="col-5">
+              <td>
                 <%= link_to(user_path(@user)) do %>
                   <%= image_tag book.user.get_profile_image(80, 80) %>
                 <% end %>
               </td>
-              <td class="col-3">
+              <td>
                 <%= link_to book_path(book) do %>
                   <%= book.title %>
                 <% end %>
               </td>
-              <td col="4">
+              <td>
                 <%= book.body %>
+              </td>
+              <% if book.favorited_by?(current_user) %>
+                <td>
+                  <%= link_to book_favorites_path(book), method: :delete do %>
+                    <i class="fas fa-heart"></i><%= book.favorites.count %>
+                  <% end %>
+                </td>  
+              <% else %>
+                <td>
+                  <%= link_to book_favorites_path(book), method: :post do %>
+                    <i class="far fa-heart"></i><%= book.favorites.count %>
+                  <% end %>
+                </td>
+              <% end %>
+            </td>
+              <td>
+                <%= book.favorites.count %>
               </td>
             </tr>
           <% end %>
